:sparkles: Added register button

--- a/style.css
+++ b/style.css
@@ -109,6 +109,18 @@ body * {
     box-shadow: 0px 10px 40px -12px #00ff8052;
 }
 
+.btn-cadastre-se {
+    font-family: 'Noto Sans', sans-serif;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 2px;
+    color: white;
+}
+
+.span-cadastre-se {
+    color: #0f8;
+}
+
 @media only screen and (max-width: 950px) {
     .card-login {
         width: 85%;
@@ -118,6 +130,7 @@ body * {
 @media only screen and (max-width: 600px) {
     .main-login {
         flex-direction: column;
+        padding-bottom: 30px;
     }
 
     .left-login > h1 {
@@ -140,5 +153,9 @@ body * {
 
     .card-login {
         width: 90%;
+    }
+
+    .btn-plus {
+        width: 100%;
     }
 }
